feat(ms-tienda): integrar Swagger, HATEOAS, reportes JPA y tests unitarios